@@ -12,8 +12,11 @@ import org.bukkit.event.HandlerList;
 import org.bukkit.event.Listener;
 import org.bukkit.event.world.WorldInitEvent;
 import org.bukkit.plugin.Plugin;
+import org.bukkit.plugin.ServicePriority;
 import org.bukkit.plugin.java.JavaPlugin;
+import org.popcraft.chunky.api.ChunkyAPI;
 import org.popcraft.chunky.command.ChunkyCommand;
+import org.popcraft.chunky.command.CommandArguments;
 import org.popcraft.chunky.command.CommandLiteral;
 import org.popcraft.chunky.integration.WorldBorderIntegration;
 import org.popcraft.chunky.platform.BukkitConfig;
@@ -25,10 +28,9 @@ import org.popcraft.chunky.util.TranslationKey;
 import org.popcraft.chunky.util.Version;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.popcraft.chunky.util.Translator.translate;
 
@@ -50,8 +52,10 @@ public final class ChunkyBukkit extends JavaPlugin implements Listener {
         if (!isEnabled()) {
             return;
         }
+        getServer().getServicesManager().register(Chunky.class, chunky, this, ServicePriority.Normal);
+        getServer().getServicesManager().register(ChunkyAPI.class, chunky.getApi(), this, ServicePriority.Normal);
         if (chunky.getConfig().getContinueOnRestart()) {
-            getServer().getScheduler().scheduleSyncDelayedTask(this, () -> chunky.getCommands().get(CommandLiteral.CONTINUE).execute(chunky.getServer().getConsole(), new String[]{}));
+            getServer().getScheduler().scheduleSyncDelayedTask(this, () -> chunky.getCommands().get(CommandLiteral.CONTINUE).execute(chunky.getServer().getConsole(), CommandArguments.empty()));
         }
         if (getServer().getPluginManager().getPlugin("WorldBorder") != null) {
             chunky.getServer().getIntegrations().put("border", new WorldBorderIntegration());
@@ -71,37 +75,39 @@ public final class ChunkyBukkit extends JavaPlugin implements Listener {
 
     @SuppressWarnings("NullableProblems")
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
-        Sender bukkitSender = sender instanceof Player ? new BukkitPlayer((Player) sender) : new BukkitSender(sender);
-        Map<String, ChunkyCommand> commands = chunky.getCommands();
+    public boolean onCommand(final CommandSender sender, final Command command, final String label, final String[] args) {
+        final Sender bukkitSender = sender instanceof final Player player ? new BukkitPlayer(player) : new BukkitSender(sender);
+        final Map<String, ChunkyCommand> commands = chunky.getCommands();
+        final CommandArguments arguments = CommandArguments.of(Arrays.copyOfRange(args, Math.min(1, args.length), args.length));
         if (args.length > 0 && commands.containsKey(args[0].toLowerCase())) {
             if (sender.hasPermission(COMMAND_PERMISSION_KEY + args[0].toLowerCase())) {
-                commands.get(args[0].toLowerCase()).execute(bukkitSender, args);
+                commands.get(args[0].toLowerCase()).execute(bukkitSender, arguments);
             } else {
                 bukkitSender.sendMessage(TranslationKey.COMMAND_NO_PERMISSION);
             }
         } else {
-            commands.get(CommandLiteral.HELP).execute(bukkitSender, new String[]{});
+            commands.get(CommandLiteral.HELP).execute(bukkitSender, arguments);
         }
         return true;
     }
 
     @SuppressWarnings("NullableProblems")
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(final CommandSender sender, final Command command, final String alias, final String[] args) {
         if (args.length < 1) {
-            return Collections.emptyList();
+            return List.of();
         }
         final List<String> suggestions = new ArrayList<>();
-        Map<String, ChunkyCommand> commands = chunky.getCommands();
+        final Map<String, ChunkyCommand> commands = chunky.getCommands();
         if (args.length == 1) {
             commands.keySet().stream().filter(name -> sender.hasPermission(COMMAND_PERMISSION_KEY + name)).forEach(suggestions::add);
         } else if (commands.containsKey(args[0].toLowerCase()) && sender.hasPermission(COMMAND_PERMISSION_KEY + args[0].toLowerCase())) {
-            suggestions.addAll(commands.get(args[0].toLowerCase()).tabSuggestions(args));
+            final CommandArguments arguments = CommandArguments.of(Arrays.copyOfRange(args, 1, args.length));
+            suggestions.addAll(commands.get(args[0].toLowerCase()).suggestions(arguments));
         }
         return suggestions.stream()
                 .filter(s -> s.toLowerCase().contains(args[args.length - 1].toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Chunky getChunky() {
