@@ -8,33 +8,34 @@ import org.popcraft.chunky.util.Input;
 import org.popcraft.chunky.util.TranslationKey;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-public class CancelCommand extends ChunkyCommand {
-    public CancelCommand(Chunky chunky) {
-        super(chunky);
+public class CancelCommand implements ChunkyCommand {
+    private final Chunky chunky;
+
+    public CancelCommand(final Chunky chunky) {
+        this.chunky = chunky;
     }
 
-    public void execute(Sender sender, String[] args) {
+    @Override
+    public void execute(final Sender sender, final CommandArguments arguments) {
         final Map<String, GenerationTask> generationTasks = chunky.getGenerationTasks();
-        if (generationTasks.isEmpty() && chunky.getConfig().loadTasks().stream().allMatch(GenerationTask::isCancelled)) {
+        if (generationTasks.isEmpty() && chunky.getTaskLoader().loadTasks().stream().allMatch(GenerationTask::isCancelled)) {
             sender.sendMessagePrefixed(TranslationKey.FORMAT_CANCEL_NO_TASKS);
             return;
         }
         final Runnable cancelAction;
-        if (args.length > 1) {
-            final Optional<World> world = Input.tryWorld(chunky, String.join(" ", Arrays.copyOfRange(args, 1, args.length)));
-            if (!world.isPresent()) {
+        if (arguments.size() > 0) {
+            final Optional<World> world = Input.tryWorld(chunky, arguments.joined());
+            if (world.isEmpty()) {
                 sender.sendMessage(TranslationKey.HELP_CANCEL);
                 return;
             }
             cancelAction = () -> {
                 sender.sendMessagePrefixed(TranslationKey.FORMAT_CANCEL, world.get().getName());
-                chunky.getConfig().cancelTask(world.get());
+                chunky.getTaskLoader().cancelTask(world.get());
                 if (chunky.getGenerationTasks().containsKey(world.get().getName())) {
                     chunky.getGenerationTasks().remove(world.get().getName()).stop(true);
                 }
@@ -42,7 +43,7 @@ public class CancelCommand extends ChunkyCommand {
         } else {
             cancelAction = () -> {
                 sender.sendMessagePrefixed(TranslationKey.FORMAT_CANCEL_ALL);
-                chunky.getConfig().cancelTasks();
+                chunky.getTaskLoader().cancelTasks();
                 chunky.getGenerationTasks().values().forEach(generationTask -> generationTask.stop(true));
                 chunky.getGenerationTasks().clear();
                 chunky.getScheduler().cancelTasks();
@@ -53,12 +54,12 @@ public class CancelCommand extends ChunkyCommand {
     }
 
     @Override
-    public List<String> tabSuggestions(String[] args) {
-        if (args.length == 2) {
-            List<String> suggestions = new ArrayList<>();
+    public List<String> suggestions(final CommandArguments arguments) {
+        if (arguments.size() == 1) {
+            final List<String> suggestions = new ArrayList<>();
             chunky.getServer().getWorlds().forEach(world -> suggestions.add(world.getName()));
             return suggestions;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
