@@ -8,26 +8,27 @@ import org.popcraft.chunky.util.Input;
 import org.popcraft.chunky.util.TranslationKey;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-public class PauseCommand extends ChunkyCommand {
-    public PauseCommand(Chunky chunky) {
-        super(chunky);
+public class PauseCommand implements ChunkyCommand {
+    private final Chunky chunky;
+
+    public PauseCommand(final Chunky chunky) {
+        this.chunky = chunky;
     }
 
-    public void execute(Sender sender, String[] args) {
+    @Override
+    public void execute(final Sender sender, final CommandArguments arguments) {
         final Map<String, GenerationTask> generationTasks = chunky.getGenerationTasks();
         if (generationTasks.isEmpty()) {
             sender.sendMessagePrefixed(TranslationKey.FORMAT_PAUSE_NO_TASKS);
             return;
         }
-        if (args.length > 1) {
-            final Optional<World> world = Input.tryWorld(chunky, String.join(" ", Arrays.copyOfRange(args, 1, args.length)));
-            if (!world.isPresent() || !generationTasks.containsKey(world.get().getName())) {
+        if (arguments.size() > 0) {
+            final Optional<World> world = Input.tryWorld(chunky, arguments.joined());
+            if (world.isEmpty() || !generationTasks.containsKey(world.get().getName())) {
                 sender.sendMessage(TranslationKey.HELP_PAUSE);
             } else {
                 generationTasks.get(world.get().getName()).stop(false);
@@ -42,12 +43,12 @@ public class PauseCommand extends ChunkyCommand {
     }
 
     @Override
-    public List<String> tabSuggestions(String[] args) {
-        if (args.length == 2) {
-            List<String> suggestions = new ArrayList<>();
+    public List<String> suggestions(final CommandArguments arguments) {
+        if (arguments.size() == 1) {
+            final List<String> suggestions = new ArrayList<>();
             chunky.getServer().getWorlds().forEach(world -> suggestions.add(world.getName()));
             return suggestions;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
