@@ -1,15 +1,14 @@
 package org.popcraft.chunky.platform;
 
+import net.minecraft.registry.RegistryKey;
+import net.minecraft.registry.RegistryKeys;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.util.Identifier;
-import net.minecraft.util.registry.Registry;
-import net.minecraft.util.registry.RegistryKey;
 import org.popcraft.chunky.ChunkyFabric;
 import org.popcraft.chunky.integration.Integration;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -19,26 +18,26 @@ public class FabricServer implements Server {
     private final ChunkyFabric plugin;
     private final MinecraftServer server;
 
-    public FabricServer(ChunkyFabric plugin, MinecraftServer server) {
+    public FabricServer(final ChunkyFabric plugin, final MinecraftServer server) {
         this.plugin = plugin;
         this.server = server;
     }
 
     @Override
     public Map<String, Integration> getIntegrations() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     @Override
-    public Optional<World> getWorld(String name) {
+    public Optional<World> getWorld(final String name) {
         return Optional.ofNullable(Identifier.tryParse(name))
-                .map(worldIdentifier -> server.getWorld(RegistryKey.of(Registry.WORLD_KEY, worldIdentifier)))
+                .map(worldIdentifier -> server.getWorld(RegistryKey.of(RegistryKeys.WORLD, worldIdentifier)))
                 .map(FabricWorld::new);
     }
 
     @Override
     public List<World> getWorlds() {
-        List<World> worlds = new ArrayList<>();
+        final List<World> worlds = new ArrayList<>();
         server.getWorlds().forEach(world -> worlds.add(new FabricWorld(world)));
         return worlds;
     }
@@ -54,7 +53,7 @@ public class FabricServer implements Server {
     }
 
     @Override
-    public Optional<Player> getPlayer(String name) {
+    public Optional<Player> getPlayer(final String name) {
         return Optional.ofNullable(server.getPlayerManager().getPlayer(name)).map(FabricPlayer::new);
     }
 
