@@ -1,6 +1,6 @@
 package org.popcraft.chunky.platform;
 
-import net.minecraft.core.Registry;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.MinecraftServer;
@@ -9,7 +9,6 @@ import org.popcraft.chunky.integration.Integration;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -19,26 +18,26 @@ public class ForgeServer implements Server {
     private final ChunkyForge plugin;
     private final MinecraftServer server;
 
-    public ForgeServer(ChunkyForge plugin, MinecraftServer server) {
+    public ForgeServer(final ChunkyForge plugin, final MinecraftServer server) {
         this.plugin = plugin;
         this.server = server;
     }
 
     @Override
     public Map<String, Integration> getIntegrations() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     @Override
-    public Optional<World> getWorld(String name) {
+    public Optional<World> getWorld(final String name) {
         return Optional.ofNullable(ResourceLocation.tryParse(name))
-                .map(resourceLocation -> server.getLevel(ResourceKey.create(Registry.DIMENSION_REGISTRY, resourceLocation)))
+                .map(resourceLocation -> server.getLevel(ResourceKey.create(Registries.DIMENSION, resourceLocation)))
                 .map(ForgeWorld::new);
     }
 
     @Override
     public List<World> getWorlds() {
-        List<World> worlds = new ArrayList<>();
+        final List<World> worlds = new ArrayList<>();
         server.getAllLevels().forEach(world -> worlds.add(new ForgeWorld(world)));
         return worlds;
     }
@@ -54,7 +53,7 @@ public class ForgeServer implements Server {
     }
 
     @Override
-    public Optional<Player> getPlayer(String name) {
+    public Optional<Player> getPlayer(final String name) {
         return Optional.ofNullable(server.getPlayerList().getPlayerByName(name)).map(ForgePlayer::new);
     }
 
